Restricciones en la seleccion de personajes y cambio a fase 3

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
         </div>
     
     </section>
+
+    <section class="secvis" id="fase3" style="display:none">
+    <p class="textoBasico">ESTOY EN LA 33333333333333333333333</p></section>
     
 
     <script src="js/fighters.js"></script>
